--- a/ParkHere/app/src/main/res/layout/post_activity_detail.xml
+++ b/ParkHere/app/src/main/res/layout/post_activity_detail.xml
@@ -197,97 +197,31 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
+
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/button_startDate"
-            android:layout_width="94dp"
-            android:layout_height="36dp"
-            android:layout_weight="1"
-            android:text="StartDate" />
-
-        <TextView
-            android:id="@+id/view_startDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="startDate_text" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/button_endDate"
-            android:layout_width="wrap_content"
-            android:layout_height="37dp"
-            android:layout_weight="1"
-            android:text="endDate" />
-
-        <TextView
-            android:id="@+id/view_endDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="endDate_text" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/comments_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/post_button"
-            android:layout_alignStart="@+id/post_button"
-            android:layout_weight="1"
-            android:background="@color/colorPrimary"
-            android:foregroundGravity="left"
-            android:gravity="center_horizontal|center"
-            android:text="Comments"
-            android:textColor="@color/white"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/book_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/comments_button"
-            android:layout_weight="1"
-            android:background="@color/colorPrimary"
-            android:foregroundGravity="bottom"
-            android:gravity="center_horizontal|center"
-            android:text="@string/book"
-            android:textColor="@color/white"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:gravity="bottom|center">
 
         <Button
             android:id="@+id/post_button"
-            android:layout_width="142dp"
-            android:layout_height="37dp"
-            android:layout_weight="1"
             android:background="@color/colorPrimary"
-            android:foregroundGravity="bottom"
-            android:gravity="center_horizontal|center"
-            android:text="@string/post"
             android:textColor="@color/white"
-            android:textStyle="bold" />
-    </LinearLayout>
-
+            android:textStyle="bold"
+            android:text="@string/post"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:foregroundGravity="bottom"
+            android:gravity="center_horizontal|center" />
+        <Button
+            android:id="@+id/book_button"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:text="@string/book"
+            android:layout_width="150dp"
+            android:layout_height="50dp"
+            android:foregroundGravity="bottom"
+            android:gravity="center_horizontal|center" />
+    </RelativeLayout>
 </LinearLayout>
